<resources>
    <string name="app_name">ShoeStore</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="it_s_a_shoe">it\'s a shoe</string>
    <string name="image_of_shoes">image of shoes</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_title">Welcome to the ShoeStore</string>
    <string name="welcome_text">ShoeStore, where the fines shoes meet the fastest feet.</string>
    <string name="instructions_title">How to work with ShoeStore</string>
    <string name="instructions_text">A listing of all shoes in our store is presented on the next page…\n\nPress + to add new shoes.</string>
    <string name="instructions">Instructions</string>
    <string name="shoe_list">Shoe list</string>
    <string name="details">Details</string>
    <string name="app_title">ShoeStore</string>
    <string name="shoe_size">Size: %1$s (US)</string>
    <string name="shoe_name">Model</string>
    <string name="shoe_manufacturer">Manufacturer</string>
    <string name="enter_new_shoe_data">Enter new shoe data:</string>
    <string name="description_of_shoe">Description</string>
    <string name="shoe_size_us">Size (US)</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="anchor_char">x</string>
    <string name="model">Model</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="manufacturer">Manufacturer</string>
</resources>
