<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivShoe"
            android:layout_width="0dp"
            android:layout_height="@dimen/image_header_height"
            android:layout_marginStart="@dimen/horizontal_margin_small"
            android:layout_marginTop="@dimen/vertical_margin_image"
            android:layout_marginEnd="@dimen/horizontal_margin_small"
            android:contentDescription="@string/it_s_a_shoe"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/shoe"
            />

        <!-- invisible TV for alignment of label and edit text field -->
        <TextView
            android:id="@+id/tvAnchorEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_image"
            android:layout_marginStart="@dimen/horizontal_margin_anchor"
            android:text="x"
            android:textSize="50sp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/ivShoe"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin_small"
            android:layout_marginEnd="@dimen/horizontal_margin_small"
            android:text="@string/email"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintBaseline_toBaselineOf="@id/tvAnchorEmail"
            app:layout_constraintEnd_toStartOf="@+id/tvAnchorEmail"
            />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:autofillHints="Enter email address"
            app:layout_constraintBaseline_toBaselineOf="@id/tvAnchorEmail"
            app:layout_constraintStart_toEndOf="@+id/tvAnchorEmail"
            tools:labelFor="@id/etEmail"
            />

        <!-- invisible TV for alignment of label and edit text field -->
        <TextView
            android:id="@+id/tvAnchorPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_small"
            android:layout_marginStart="@dimen/horizontal_margin_anchor"
            android:text="x"
            android:textSize="50sp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/tvAnchorEmail"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin_small"
            android:layout_marginEnd="@dimen/horizontal_margin_small"
            android:text="@string/password"
            android:textSize="@dimen/label_text_size"
            app:layout_constraintBaseline_toBaselineOf="@id/tvAnchorPassword"
            app:layout_constraintEnd_toStartOf="@+id/tvAnchorPassword"
            />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Enter password"
            android:ems="10"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            app:layout_constraintBaseline_toBaselineOf="@id/tvAnchorPassword"
            app:layout_constraintStart_toEndOf="@+id/tvAnchorPassword"
            tools:labelFor="@id/etPassword" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin_small"
            android:paddingStart="@dimen/button_padding"
            android:paddingEnd="@dimen/button_padding"
            android:text="@string/login"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvAnchorPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btSignup"
            />

        <Button
            android:id="@+id/btSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin_small"
            android:paddingStart="@dimen/button_padding"
            android:paddingEnd="@dimen/button_padding"
            android:text="@string/sign_up"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tvAnchorPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btLogin"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
